<resources>
    <string name="app_name">Res Order</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="close_button"><![CDATA[<string name=\"cloClose Button for Activity]]></string>
    <string name="login">Log in</string>
    <string name="newUser"><![CDATA[Not an account yet? Sign Up here.]]></string>
    <string name="email">User name</string>
    <string name="password">Password</string>
    <string name="title_activity_item_selection">ActivityItemSelection</string>
    <string name="item_img">item_img</string>
    <string name="title_activity_order_selection">OrderSelection</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="your_chart">Your Cart</string>
    <string name="signUp">Sign up</string>
    <string name="fullName">Full name</string>
    <string name="already_user">Already registered? Login here</string>
    <string name="con_password">Confirm password</string>
    <string name="phone">Phone</string>
    <string name="add_item">Add item</string>

    <string name="res_name">Res Order n Restaurant</string>
    <string name="res_address">Main street Jaffna, Sri lanka</string>

    <string name="start_time">From 9 am to 10 pm week days and 10 am to 11 pm weekends</string>
    <string name="res_desc">A restaurant is a business which prepares and serves food and drinks to customers in exchange for money.
        Meals are generally served and eaten on the premises, but many restaurants also offer take-out and food delivery services.
        Restaurants vary greatly in appearance and offerings,
        including a wide variety of cuisines and service models ranging from inexpensive fast
        food restaurants and cafeterias to mid-priced family restaurants, to high-priced luxury establishments.
        In Western countries, most mid- to high-range restaurants serve alcoholic beverages such as beer and wine.
        Some restaurants serve all the major meals, such as breakfast, lunch, and dinner (e.g., major fast food chains, diners,
        hotel restaurants, and airport restaurants). Other restaurants may only serve a single meal (for example, a pancake house may only serve breakfast)
        or they may serve two meals (e.g., lunch and dinner).</string>




</resources>
